google login api

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_USERNAME=trungkien88992020
 DATABASE_PASSWORD=trung9933A
 SECRET_KEY=eventhubproject
+APP_PASSWORD = mlhq uaiq siov aeha
+EMAIL = trungkien88992020@gmail.com
